--- a/src/main/scss/components/sidebar/_as-sidebar-shift-menu.scss
+++ b/src/main/scss/components/sidebar/_as-sidebar-shift-menu.scss
@@ -32,7 +32,7 @@ $apishore-menu-color: #888;
 .apishore-shift-menu
 {
 	position:relative;
-	background-color: map-get($as-palette-sidebar, 50);
+	background-color: #4b4b4b;
 	width: $as-sidebar-width-desktop;
 	min-width: $as-sidebar-width-desktop;
 	max-width: $as-sidebar-width-desktop;
