--- a/src/main/scss/components/sidebar/_as-sidebar.scss
+++ b/src/main/scss/components/sidebar/_as-sidebar.scss
@@ -18,6 +18,7 @@ $as-sidebar-menu-item-hover-bgcolor: map-get($as-palette-grey,300) !default;
 }
 .as-sidebar-top-menu
 {
+	background-color: #4b4b4b;
 	background-image: $as-sidebar-top-menu-bg-image;
 	background-size: cover;
 	font-family: "Roboto";
