--- a/src/main/scss/components/list/md-list/list-mode/_all.scss
+++ b/src/main/scss/components/list/md-list/list-mode/_all.scss
@@ -1,10 +1,12 @@
 @import "as-md-list-nav-row";
 @import "as-md-list-row";
 @import "as-md-list-column";
+@import "as-md-list-row-left-indicator";
 
 .as-md-list
 {
 }
+
 .as-md-list-header
 {
 	height: $as-md-list-header-height;
