--- a/src/main/scss/components/list/md-list/list-mode/_as-md-list-row.scss
+++ b/src/main/scss/components/list/md-list/list-mode/_as-md-list-row.scss
@@ -44,13 +44,14 @@ $as-md-list-header-height: 30px;
 }
 .as-md-list-row-subtitle
 {
-	padding-top: 0px;
+	padding-top: 4px;
 	font-size: 14px;
 	padding-bottom: 20px;
 	color: map-get($as-palette-fg, dark);
 	text-overflow: ellipsis;
 	overflow:hidden;
 	white-space: nowrap;
+	line-height: 26px;
 }
 .as-md-list-row-alert-holder
 {
