--- a/src/main/scss/components/$common/layout/_all.scss
+++ b/src/main/scss/components/$common/layout/_all.scss
@@ -2,6 +2,7 @@
 @import "as-box";
 @import "as-grid-system";
 @import "as-grid";
+@import "as-grid-system-tune";
 @import "as-view-settings";
 @import "as-universal-search";
 @import "as-status-label";
