--- a/src/main/scss/components/$common/layout/_as-box.scss
+++ b/src/main/scss/components/$common/layout/_as-box.scss
@@ -77,6 +77,11 @@ body.as-vbox
 	position:relative;
 //	flex-grow:1;
  	flex: 1 0 auto;
+ 	min-width: 0;
+ 	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
 .as-cell-default
 {
