--- a/src/main/scss/components/list/data-card/_as-data-card.scss
+++ b/src/main/scss/components/list/data-card/_as-data-card.scss
@@ -10,7 +10,7 @@
 	border: 1px solid rgba(0,0,0,0.10);
 	border-bottom: 3px solid rgba(0,0,0,0.10);
 	max-width: 350px;
-	height: 300px;
+	min-height: 300px;
 	width: 30%;
 	display: inline-block;
 	&:hover,
@@ -29,10 +29,23 @@
 		}
 	}
 }
+.as-data-card-image
+{
+	width: 100%;
+	height: 200px;
+}
 .as-data-card-inner
 {
 	border-top: solid 4px transparent;
 	padding: $as-gutter;
+}
+.as-data-card-title,
+.as-data-card-subtitle,
+.as-data-card-title-text
+{
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	min-width: 0;
 }
 .as-data-card-title
 {
