--- a/src/main/scss/components/card/_as-card.scss
+++ b/src/main/scss/components/card/_as-card.scss
@@ -236,3 +236,24 @@
     border: 1px solid #fff;
   }
 }
+
+.as-card-image
+{
+	background-size: cover;
+	height: 200px;
+}
+.as-card-list
+{
+	margin-left: $as-gutter;
+	margin-right: $as-gutter;
+	.as-card-list-column
+	{
+		width: 350px;
+		margin-right: $as-gutter;
+	}
+	.as-card
+	{
+		width: 350px;
+		float:left;
+	}
+}
